src/test/ui/error-codes/E0133.stderr
error[E0133]: call to unsafe function requires unsafe function or block
  --> $DIR/E0133.rs:14:5
   |
LL |     f();
   |     ^^^ call to unsafe function

error: aborting due to previous error

For more information about this error, try `rustc --explain E0133`.
